[gd_scene load_steps=9 format=3 uid="uid://cgqlbplf60ldv"]

[ext_resource type="Texture2D" uid="uid://bc1adsuop3b1x" path="res://assets/sprites/titre.png" id="1_k3xpa"]
[ext_resource type="Texture2D" uid="uid://c21gb7uyapkgl" path="res://assets/sprites/menu/menu_1.png" id="1_tkyrg"]
[ext_resource type="Script" path="res://src/ImageExport/ImageExportScene.gd" id="1_tlics"]
[ext_resource type="Texture2D" uid="uid://frvnd6c4gux8" path="res://assets/sprites/menu/menu_3.png" id="2_pukhn"]
[ext_resource type="Texture2D" uid="uid://bvqpr5max1dwk" path="res://assets/sprites/tableau_name.png" id="3_8pt0m"]
[ext_resource type="FontFile" uid="uid://cs2acdc0dlopd" path="res://assets/fonts/NanumPenScript-Regular.ttf" id="4_qee2u"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hjkl8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_buba7"]

[node name="ImageExportScene" type="ReferenceRect"]
offset_right = 640.0
offset_bottom = 480.0
script = ExtResource("1_tlics")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tkyrg")
expand_mode = 1

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pukhn")
expand_mode = 1

[node name="Titre" type="Sprite2D" parent="."]
position = Vector2(102, 68)
rotation = -0.523599
scale = Vector2(0.243516, 0.243516)
texture = ExtResource("1_k3xpa")

[node name="GoalTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 361.0
offset_top = 136.0
offset_right = 571.0
offset_bottom = 391.0
texture = SubResource("PlaceholderTexture2D_hjkl8")
expand_mode = 1

[node name="UserTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
offset_left = 80.0
offset_top = 135.0
offset_right = 290.0
offset_bottom = 390.0
texture = SubResource("PlaceholderTexture2D_buba7")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="UserTextureRect"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelNameBg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -75.0
offset_right = 275.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_8pt0m")
expand_mode = 1

[node name="LevelNameLabel" type="Label" parent="LevelNameBg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qee2u")
theme_override_font_sizes/font_size = 40
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grade" type="Control" parent="."]
anchors_preset = 0

[node name="Label" type="Label" parent="Grade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 399.0
offset_top = 25.0
offset_right = 559.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qee2u")
theme_override_font_sizes/font_size = 48
text = "Grade:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GradeLabel" type="Label" parent="Grade"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 538.0
offset_top = 23.0
offset_right = 602.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qee2u")
theme_override_font_sizes/font_size = 72
text = "A+"
vertical_alignment = 1
